fix(buttons): fixed buttons with icons to align content vertically correctly, added example

--- a/projects/seb-ng-material-theme/overrides/_button.scss
+++ b/projects/seb-ng-material-theme/overrides/_button.scss
@@ -12,13 +12,22 @@ body {
     line-height: 44px;
     font-size: 16px;
 
-    .mat-icon {
-      width: 16px;
-      height: 16px;
+    .mat-button-wrapper {
 
-      &:not(:only-child) {
-        margin-right: 10px;
+      .mat-icon {
+        width: 16px;
+        height: 16px;
+
+        &:not(:only-child) {
+          margin-right: 10px;
+        }
       }
+
+      .mat-icon,
+      span {
+        vertical-align: baseline;
+      }
+
     }
   }
 
